[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
  "wheel",
]

[project]
name = "eofs"
description = "EOF analysis in Python"
license = {text = "GPL-3.0"}
authors = [
    {name = "Andrew Dawson", email = "dawson@atm.ox.ac.uk"},
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = [
  "version",
  "readme",
]
dependencies = [
  "numpy",
]
[project.optional-dependencies]
extras = [
  "cdms2",
  "cdutil",
  "iris",
  "xarray",
]
[project.urls]
documentation = "https://ajdawson.github.io/eofs"
homepage = "https://github.com/ajdawson/eofs"
repository = "https://github.com/ajdawson/eofs"

[tool.setuptools]
license-files = ["COPYING"]
include-package-data = true
[tool.setuptools.packages.find]
where = ["lib"]
[tool.setuptools.package-data]
eofs_examples = [
  "example_data/*",
]
eofs_tests = ["data/*"]
[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "lib/eofs/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
select = [
    "E", # pycodecstyle
]
[tool.ruff.per-file-ignores]
"doc/conf.py" = [
  "E401",
  "E402",
]
"doc/devguide/gitwash_dumper.py" = [
  "E714",
]

[tool.pytest.ini_options]
addopts = "-vrsx"
testpaths = "lib"
